<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_weight="0.57"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_background_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/background_label"
            android:text="@string/background"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="113dp" />

        <TextView
            android:id="@+id/info_background_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/background_description"
            android:text="@string/background_desc"
            android:textSize="16sp"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/info_background_label" />

        <TextView
            android:id="@+id/info_future_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="21dp"
            android:contentDescription="@string/future_updates_label"
            android:text="@string/future_updates"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/info_background_desc" />

        <TextView
            android:id="@+id/info_future_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/future_updates_description"
            android:text="@string/info_future_desc"
            android:textSize="16sp"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/info_future_label" />

        <Button
            android:id="@+id/info_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:text="Back"
            android:onClick="onBack" />
    </LinearLayout>
</android.support.v7.widget.CardView>