<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_weight="0.57"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_margin="32dp">

        <LinearLayout
            android:id="@+id/help_background_group"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_chainStyle="packed"
            style="@style/help_card_group_style">

            <TextView
                android:id="@+id/info_background_label"
                android:text="@string/background"
                android:contentDescription="@string/background_label"
                android:autoSizeTextType="uniform"
                style="@style/help_card_label_style" />

            <TextView
                android:id="@+id/info_background_desc"
                android:text="@string/background_desc"
                android:contentDescription="@string/background_description"
                android:autoSizeTextType="uniform"
                style="@style/match_match"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_controls_group"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/help_background_group"
            style="@style/help_card_group_style">

            <TextView
                android:id="@+id/info_controls_label"
                android:text="Controls"
                android:contentDescription="controls label"
                android:autoSizeTextType="uniform"
                style="@style/help_card_label_style"/>

            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal">

                <ImageView
                    style="@style/help_card_thumbnail_style"
                    android:src="@drawable/icon_search"/>

                <TextView
                    style="@style/help_card_control_desc_style"
                    android:autoSizeTextType="uniform"
                    android:text=" (or tap card)... Reveals the name of the pose." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/help_card_thumbnail_style"
                    android:src="@drawable/icon_ok78"/>

                <TextView
                    style="@style/help_card_control_desc_style"
                    android:autoSizeTextType="uniform"
                    android:text=" (or swipe card right)... You guessed RIGHT! Temporarily removes card from deck." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/help_card_thumbnail_style"
                    android:src="@drawable/icon_cancel78"/>

                <TextView
                    style="@style/help_card_control_desc_style"
                    android:autoSizeTextType="uniform"
                    android:text=" (or swipe card left)... Incorrect guess. Returns card to deck to try again later." />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_future_group"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/help_controls_group"
            style="@style/help_card_group_style">

            <TextView
                android:id="@+id/info_future_label"
                android:text="@string/future_updates"
                android:contentDescription="@string/future_updates_label"
                android:autoSizeTextType="uniform"
                style="@style/help_card_label_style"/>

            <TextView
                android:id="@+id/info_future_desc"
                android:text="@string/info_future_desc"
                android:contentDescription="@string/future_updates_description"
                android:autoSizeTextType="uniform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <Button
            android:id="@+id/help_back_button"
            android:text="@string/back"
            android:onClick="onBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/help_future_group"
            card_view:layout_constraintHorizontal_bias="0.5"
            style="@style/help_card_group_margin"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>