<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <android.support.constraint.Guideline
        android:id="@+id/card_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_percent=".25" />

    <ImageView
        android:id="@+id/pose_image"
        android:contentDescription="@string/pose_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent"
        card_view:layout_constraintDimensionRatio="h,1:1"
        card_view:layout_constraintHorizontal_bias="0.5"
        card_view:srcCompat="@drawable/bird_of_paradise_revolved_l" />

    <TextView
        android:id="@+id/english_name"
        style="@style/card_text_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorShade"
        android:fontFamily="casual"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/english_name"
        android:textColor="@color/card_text_color"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"

        card_view:layout_constraintBottom_toTopOf="@+id/sanskrit_name"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sanskrit_name"
        android:text="@string/sanskrit_name"
        android:background="@color/colorShade"
        android:textColor="@color/card_text_color"
        android:fontFamily="monospace"
        android:autoSizeTextType="uniform"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:gravity="center_vertical|center_horizontal"

        card_view:layout_constraintTop_toBottomOf="@+id/english_name"
        card_view:layout_constraintLeft_toLeftOf="@+id/english_name"
        card_view:layout_constraintRight_toRightOf="@+id/english_name"
        card_view:layout_constraintBottom_toTopOf="@+id/card_guideline"
        style="@style/card_text_color"/>

</android.support.constraint.ConstraintLayout>