<?xml version="1.0" encoding="utf-8"?>
<com.jeffreyfhow.yogaflashcards.Cards.BottomCard
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.57"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp"
        tools:ignore="InefficientWeight">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/pose_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/pose_image"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/sanskrit_name"
                card_view:srcCompat="@drawable/bird_of_paradise_revolved_l"
                card_view:layout_constraintHorizontal_bias="0.5" />

            <TextView
                android:id="@+id/sanskrit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sanskrit_name"
                android:textSize="24sp"
                android:alpha="0"
                card_view:layout_constraintBottom_toTopOf="@+id/pose_image"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/english_name" />

            <TextView
                android:id="@+id/english_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:ems="10"
                android:fontFamily="casual"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/english_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:alpha="0"
                card_view:layout_constraintBottom_toTopOf="@+id/sanskrit_name"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_chainStyle="spread_inside" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</com.jeffreyfhow.yogaflashcards.Cards.BottomCard>